Add warnings to dashboard response